--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-trytond_product_barcode
-=======================
+trytond-sale_pos
+================
 
 The sale_pos module of the Tryton application platform.
 
