--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -263,6 +263,10 @@ msgctxt "model:ir.action,name:act_sale_form"
 msgid "POS Sales"
 msgstr "Ventas TPV"
 
+msgctxt "model:ir.action,name:act_sale_reconcile"
+msgid "Reconcile POS Sales"
+msgstr "Conciliar ventas TPV"
+
 msgctxt "model:ir.action,name:report_sale_ticket"
 msgid "Sale Ticket"
 msgstr "Ticket de venta"
@@ -587,7 +591,15 @@ msgctxt "wizard_button:sale_pos.add_product,start,add:"
 msgid "Add"
 msgstr "Añadir"
 
+msgctxt "wizard_button:sale_pos.add_product,start,add_:"
+msgid "Add"
+msgstr "Añadir"
+
 msgctxt "wizard_button:sale_pos.add_product,start,add_new:"
+msgid "Add and New"
+msgstr "Añadir y nuevo"
+
+msgctxt "wizard_button:sale_pos.add_product,start,add_new_:"
 msgid "Add and New"
 msgstr "Añadir y nuevo"
 
@@ -600,5 +612,9 @@ msgid "Cancel"
 msgstr "Cancelar"
 
 msgctxt "wizard_button:sale_pos.sale_payment,start,pay:"
+msgid "Pay"
+msgstr "Pagar"
+
+msgctxt "wizard_button:sale_pos.sale_payment,start,pay_:"
 msgid "Pay"
 msgstr "Pagar"
