--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -1,10 +1,14 @@
-#
+# 
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "error:product.code:"
 msgid "Invalid Barcode number!"
 msgstr "El número del código de barras no es correcto."
+
+msgctxt "error:sale.sale:"
+msgid "Go to user preferences and select a shop (\"%s\")"
+msgstr "Seleccione una tienda en sus preferencias (\"%s\")"
 
 msgctxt "error:sale_pos.sale_payment:"
 msgid "A customer invoice/refund from POS sale has not been created."
@@ -71,6 +75,14 @@ msgctxt "field:sale.line,amount_w_tax:"
 msgid "Amount with Tax"
 msgstr "Total"
 
+msgctxt "field:sale.line,currency:"
+msgid "Currency"
+msgstr "Moneda"
+
+msgctxt "field:sale.line,currency_digits:"
+msgid "Currency Digits"
+msgstr "Decimales de moneda"
+
 msgctxt "field:sale.line,unit_price_w_tax:"
 msgid "Unit Price with Tax"
 msgstr "Precio unidad imp. incl."
@@ -90,6 +102,10 @@ msgstr "Pendiente"
 msgctxt "field:sale.shop,party:"
 msgid "Default Party"
 msgstr "Tercero por defecto"
+
+msgctxt "field:sale.shop,self_pick_up:"
+msgid "Default Self Pick Up"
+msgstr "Autorecogida por defecto"
 
 msgctxt "field:sale_pos.add_product_form,id:"
 msgid "ID"
@@ -146,6 +162,10 @@ msgstr "Diario por defecto"
 msgctxt "field:sale_pos.device,journals:"
 msgid "Journals"
 msgstr "Diarios"
+
+msgctxt "field:sale_pos.device,name:"
+msgid "Device Name"
+msgstr "Nombre dispositivo"
 
 msgctxt "field:sale_pos.device,rec_name:"
 msgid "Name"
@@ -211,13 +231,29 @@ msgctxt "field:sale_pos.sale_payment_form,journals:"
 msgid "Allowed Statement Journals"
 msgstr "Diarios de extracto permitidos"
 
+msgctxt "field:sale_pos.sale_payment_form,party:"
+msgid "Party"
+msgstr "Terceros"
+
 msgctxt "field:sale_pos.sale_payment_form,payment_amount:"
 msgid "Payment amount"
 msgstr "Importe pago"
 
+msgctxt "field:sale_pos.sale_payment_form,self_pick_up:"
+msgid "Self Pick Up"
+msgstr "Autorecogida"
+
 msgctxt "help:product.code,barcode:"
 msgid "Setting code will enable validation of the product number."
 msgstr "Indicando el código se podrá validar el número del producto."
+
+msgctxt "help:sale.shop,self_pick_up:"
+msgid ""
+"The goods are picked up by the customer before the sale, so no shipment is "
+"created."
+msgstr ""
+"Los productos son recogidos por el propio cliente antes de la venta, por lo "
+"que no se crea albarán."
 
 msgctxt "model:ir.action,name:act_pos_device"
 msgid "POS Device"
@@ -431,62 +467,6 @@ msgctxt "odt:sale_pos.sales_summary_by_party:"
 msgid "Total"
 msgstr "Total"
 
-msgctxt "selection:product.code,barcode:"
-msgid "CODE39"
-msgstr "CODE39"
-
-msgctxt "selection:product.code,barcode:"
-msgid "EAN"
-msgstr "EAN"
-
-msgctxt "selection:product.code,barcode:"
-msgid "EAN13"
-msgstr "EAN13"
-
-msgctxt "selection:product.code,barcode:"
-msgid "EAN8"
-msgstr "EAN8"
-
-msgctxt "selection:product.code,barcode:"
-msgid "GS1"
-msgstr "GS1"
-
-msgctxt "selection:product.code,barcode:"
-msgid "GTIN"
-msgstr "GTIN"
-
-msgctxt "selection:product.code,barcode:"
-msgid "ISBN"
-msgstr "ISBN"
-
-msgctxt "selection:product.code,barcode:"
-msgid "ISBN10"
-msgstr "ISBN10"
-
-msgctxt "selection:product.code,barcode:"
-msgid "ISBN13"
-msgstr "ISBN13"
-
-msgctxt "selection:product.code,barcode:"
-msgid "ISSN"
-msgstr "ISSN"
-
-msgctxt "selection:product.code,barcode:"
-msgid "JAN"
-msgstr "JAN"
-
-msgctxt "selection:product.code,barcode:"
-msgid "PZN"
-msgstr "PZN"
-
-msgctxt "selection:product.code,barcode:"
-msgid "UPC"
-msgstr "UPC"
-
-msgctxt "selection:product.code,barcode:"
-msgid "UPCA"
-msgstr "UPCA"
-
 msgctxt "view:product.product:"
 msgid "Codes"
 msgstr "Códigos"
@@ -504,6 +484,26 @@ msgid "Add _Sum"
 msgstr "Añadir _suma"
 
 msgctxt "view:sale.sale:"
+msgid "Cancel"
+msgstr "Cancelar"
+
+msgctxt "view:sale.sale:"
+msgid "Confirm"
+msgstr "Confirmar"
+
+msgctxt "view:sale.sale:"
+msgid "Draft"
+msgstr "Borrador"
+
+msgctxt "view:sale.sale:"
+msgid "Handle Invoice Exception"
+msgstr "Gestionar excepción de factura"
+
+msgctxt "view:sale.sale:"
+msgid "Handle Shipment Exception"
+msgstr "Gestionar excepción de envío"
+
+msgctxt "view:sale.sale:"
 msgid "Invoices"
 msgstr "Facturas"
 
@@ -516,8 +516,20 @@ msgid "Pos Cash Sales"
 msgstr "Ventas TPV"
 
 msgctxt "view:sale.sale:"
+msgid "Process"
+msgstr "Procesar"
+
+msgctxt "view:sale.sale:"
+msgid "Quote"
+msgstr "Presupuesto"
+
+msgctxt "view:sale.sale:"
 msgid "Sale"
 msgstr "Venta"
+
+msgctxt "view:sale.sale:"
+msgid "Shipments"
+msgstr "Envíos"
 
 msgctxt "view:sale.sale:"
 msgid "_Add Product"
@@ -539,29 +551,31 @@ msgctxt "view:sale_pos.device:"
 msgid "POS Device Configuration"
 msgstr "Configuración dispositivo TPV"
 
-msgctxt "view:sale_pos.device:"
-msgid "Test display"
-msgstr "Probar display"
+msgctxt "view:sale_pos.sale_payment_form:"
+msgid ""
+"If you pay the entire amount, it will process this sale, moving the products"
+" without shipment and invoicing it."
+msgstr ""
+"Si paga la cantidad total, se procesará esta venta moviendo los productos "
+"sin albarán y facturándolos."
 
-msgctxt "view:sale_pos.device:"
-msgid "Test printer"
-msgstr "Probar impresora"
+msgctxt "view:sale_pos.sale_payment_form:"
+msgid ""
+"If you want to manage the sale step by step or generate a shipment to manage"
+" the delivery, uncheck the Self Pick Up field in Sale's form and use the "
+"buttons in the bottom line."
+msgstr ""
+"Si quiere gestionar la venta paso a paso o generar un albarán para gestionar"
+" el envío, desmarque el campo \"Autorecogida\" en el formulario de la venta "
+"y use los botones de la parte inferior."
 
 msgctxt "view:sale_pos.sale_payment_form:"
 msgid "Sale Payment Form"
 msgstr "Formulario pago venta"
 
-msgctxt "wizard_button:sale_pos.add_product,start,add:"
-msgid "Add"
-msgstr "Añadir"
-
 msgctxt "wizard_button:sale_pos.add_product,start,add_:"
 msgid "Add"
 msgstr "Añadir"
-
-msgctxt "wizard_button:sale_pos.add_product,start,add_new:"
-msgid "Add and New"
-msgstr "Añadir y nuevo"
 
 msgctxt "wizard_button:sale_pos.add_product,start,add_new_:"
 msgid "Add and New"
@@ -574,10 +588,6 @@ msgstr "Cancelar"
 msgctxt "wizard_button:sale_pos.sale_payment,start,end:"
 msgid "Cancel"
 msgstr "Cancelar"
-
-msgctxt "wizard_button:sale_pos.sale_payment,start,pay:"
-msgid "Pay"
-msgstr "Pagar"
 
 msgctxt "wizard_button:sale_pos.sale_payment,start,pay_:"
 msgid "Pay"
