--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -99,6 +99,14 @@ msgctxt "field:sale.sale,residual_amount:"
 msgid "Residual Amount"
 msgstr "Pendiente"
 
+msgctxt "field:sale.sale,self_pick_up:"
+msgid "Self Pick Up"
+msgstr "Autorecogida"
+
+msgctxt "field:sale.sale,shop_address:"
+msgid "Shop Address"
+msgstr "Dirección tienda"
+
 msgctxt "field:sale.shop,party:"
 msgid "Default Party"
 msgstr "Tercero por defecto"
@@ -246,6 +254,14 @@ msgstr "Autorecogida"
 msgctxt "help:product.code,barcode:"
 msgid "Setting code will enable validation of the product number."
 msgstr "Indicando el código se podrá validar el número del producto."
+
+msgctxt "help:sale.sale,self_pick_up:"
+msgid ""
+"The goods are picked up by the customer before the sale, so no shipment is "
+"created."
+msgstr ""
+"Los productos son recogidos por el propio cliente antes de la venta, por lo "
+"que no se crea albarán."
 
 msgctxt "help:sale.shop,self_pick_up:"
 msgid ""
@@ -474,10 +490,6 @@ msgstr "Códigos"
 msgctxt "view:sale.line:"
 msgid "Lines"
 msgstr "Líneas"
-
-msgctxt "view:sale.line:"
-msgid "POS Sale"
-msgstr "Venta TPV"
 
 msgctxt "view:sale.sale:"
 msgid "Add _Sum"
