--- a/locale/ca_ES.po
+++ b/locale/ca_ES.po
@@ -99,6 +99,14 @@ msgctxt "field:sale.sale,residual_amount:"
 msgid "Residual Amount"
 msgstr "Pendent"
 
+msgctxt "field:sale.sale,self_pick_up:"
+msgid "Self Pick Up"
+msgstr "Auto-recollida"
+
+msgctxt "field:sale.sale,shop_address:"
+msgid "Shop Address"
+msgstr "Adreça botiga"
+
 msgctxt "field:sale.shop,party:"
 msgid "Default Party"
 msgstr "Tercer per defecte"
@@ -246,6 +254,14 @@ msgstr "Auto-recollida"
 msgctxt "help:product.code,barcode:"
 msgid "Setting code will enable validation of the product number."
 msgstr "Indicant el codi es podrà validar el número del producte."
+
+msgctxt "help:sale.sale,self_pick_up:"
+msgid ""
+"The goods are picked up by the customer before the sale, so no shipment is "
+"created."
+msgstr ""
+"Els productes són recollits pel propi client abans de la venda, pel que no "
+"es generà albarà."
 
 msgctxt "help:sale.shop,self_pick_up:"
 msgid ""
@@ -474,10 +490,6 @@ msgstr "Codis"
 msgctxt "view:sale.line:"
 msgid "Lines"
 msgstr "Línies"
-
-msgctxt "view:sale.line:"
-msgid "POS Sale"
-msgstr "Venda TPV"
 
 msgctxt "view:sale.sale:"
 msgid "Add _Sum"
