--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -303,6 +303,29 @@ msgctxt "model:ir.action,name:wizard_sale_payment"
 msgid "Pay"
 msgstr "Pagar"
 
+msgctxt "model:ir.action.act_window.domain,name:act_sale_form_domain_all"
+msgid "All"
+msgstr "Todo"
+
+msgctxt ""
+"model:ir.action.act_window.domain,name:act_sale_form_domain_confirmed"
+msgid "Confirmed"
+msgstr "Confirmado"
+
+msgctxt "model:ir.action.act_window.domain,name:act_sale_form_domain_draft"
+msgid "Draft"
+msgstr "Borrador"
+
+msgctxt ""
+"model:ir.action.act_window.domain,name:act_sale_form_domain_processing"
+msgid "Processing"
+msgstr "En proceso"
+
+msgctxt ""
+"model:ir.action.act_window.domain,name:act_sale_form_domain_quotation"
+msgid "Quotation"
+msgstr "Presupuesto"
+
 msgctxt "model:ir.ui.menu,name:menu_pos_device"
 msgid "POS Devices"
 msgstr "Dispositivos TPV"
