--- a/locale/ca_ES.po
+++ b/locale/ca_ES.po
@@ -2,9 +2,17 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "error:account.statement.line:"
+msgid "Amount should be a positive or negative value."
+msgstr ""
+
 msgctxt "error:product.code:"
 msgid "Invalid Barcode number!"
 msgstr "El número del codi de barres no és correcte."
+
+msgctxt "error:res.user:"
+msgid "You can not have two users with the same login!"
+msgstr ""
 
 msgctxt "error:sale.sale:"
 msgid "Go to user preferences and select a shop (\"%s\")"
@@ -71,6 +79,10 @@ msgctxt "field:res.user,pos_device:"
 msgid "POS device"
 msgstr "Dispositiu TPV"
 
+msgctxt "field:sale.configuration,pos_sequence:"
+msgid "Sale Pos Code Sequence"
+msgstr "Seqüencia Venta TPV"
+
 msgctxt "field:sale.line,amount_w_tax:"
 msgid "Amount with Tax"
 msgstr "Total"
@@ -106,6 +118,10 @@ msgstr "Auto-recollida"
 msgctxt "field:sale.sale,shop_address:"
 msgid "Shop Address"
 msgstr "Adreça botiga"
+
+msgctxt "field:sale.sale,ticket_number:"
+msgid "Ticket Number"
+msgstr "Número de tiquet"
 
 msgctxt "field:sale.shop,address:"
 msgid ""
@@ -320,7 +336,6 @@ msgctxt ""
 msgid "Confirmed"
 msgstr "Confirmat"
 
-#, fuzzy
 msgctxt "model:ir.action.act_window.domain,name:act_sale_form_domain_draft"
 msgid "Draft"
 msgstr "Esborrany"
@@ -334,6 +349,14 @@ msgctxt ""
 "model:ir.action.act_window.domain,name:act_sale_form_domain_quotation"
 msgid "Quotation"
 msgstr "Pressupost"
+
+msgctxt "model:ir.sequence.strict,name:sequence_sale_pos"
+msgid "Sale Pos"
+msgstr "Venta TPV"
+
+msgctxt "model:ir.sequence.type,name:sequence_type_sale_pos"
+msgid "Sale Pos"
+msgstr "Venta TPV"
 
 msgctxt "model:ir.ui.menu,name:menu_pos_device"
 msgid "POS Devices"
@@ -397,7 +420,7 @@ msgstr "Pendent:"
 
 msgctxt "odt:sale_pos.sale_pos_ticket:"
 msgid "Sale N°"
-msgstr "Tiquet Nº"
+msgstr "Venta Núm"
 
 msgctxt "odt:sale_pos.sale_pos_ticket:"
 msgid "Salesman:"
@@ -406,6 +429,10 @@ msgstr "Atès per:"
 msgctxt "odt:sale_pos.sale_pos_ticket:"
 msgid "Taxes:"
 msgstr "Impostos:"
+
+msgctxt "odt:sale_pos.sale_pos_ticket:"
+msgid "Ticket Nº"
+msgstr "Factura simplificada Núm."
 
 msgctxt "odt:sale_pos.sale_pos_ticket:"
 msgid "Total (excl. taxes):"
