--- a/locale/ca_ES.po
+++ b/locale/ca_ES.po
@@ -6,10 +6,6 @@ msgctxt "error:account.statement.line:"
 msgid "Amount should be a positive or negative value."
 msgstr "L'import hauria de ser un valor positiu o negatiu."
 
-msgctxt "error:product.code:"
-msgid "Invalid Barcode number!"
-msgstr "El número del codi de barres no és correcte."
-
 msgctxt "error:res.user:"
 msgid "You can not have two users with the same login!"
 msgstr "No podeu tenir dos usuaris amb el mateix identificador d'entrada!"
@@ -18,70 +14,9 @@ msgctxt "error:sale.sale:"
 msgid "Go to user preferences and select a shop (\"%s\")"
 msgstr "Selecciona una botiga en les seves preferencies (\"%s\")"
 
-msgctxt "error:sale_pos.device:"
-msgid "Device %s not found...!"
-msgstr "Dispositiu %s no trobat..."
-
-msgctxt "error:sale_pos.sale_payment:"
-msgid "A customer invoice/refund from POS sale has not been created."
-msgstr ""
-"No s'ha creat una factura/abonament de client a partir de la venda TPV."
-
-msgctxt "error:sale_pos.sale_payment:"
-msgid "A draft statement for \"%s\" payments has not been created."
-msgstr "No s'ha creat un extracte borrador pels pagaments \"%s\"."
-
-msgctxt "error:sale_pos.sale_payment:"
-msgid "You have not defined a POS device for your user."
-msgstr "No heu associat un dispositiu TPV al vostre usuari."
-
 msgctxt "field:account.statement.line,sale:"
 msgid "Sale"
 msgstr "Venda"
-
-msgctxt "field:product.code,barcode:"
-msgid "Code"
-msgstr "Codi"
-
-msgctxt "field:product.code,create_date:"
-msgid "Create Date"
-msgstr "Data creació"
-
-msgctxt "field:product.code,create_uid:"
-msgid "Create User"
-msgstr "Usuari creació"
-
-msgctxt "field:product.code,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:product.code,number:"
-msgid "Number"
-msgstr "Número"
-
-msgctxt "field:product.code,product:"
-msgid "Product"
-msgstr "Producte"
-
-msgctxt "field:product.code,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:product.code,write_date:"
-msgid "Write Date"
-msgstr "Data modificació"
-
-msgctxt "field:product.code,write_uid:"
-msgid "Write User"
-msgstr "Usuari modificació"
-
-msgctxt "field:product.product,codes:"
-msgid "Codes"
-msgstr "Codis"
-
-msgctxt "field:res.user,pos_device:"
-msgid "POS device"
-msgstr "Dispositiu TPV"
 
 msgctxt "field:sale.configuration,pos_sequence:"
 msgid "Sale Pos Code Sequence"
@@ -102,6 +37,10 @@ msgstr "Decimals de la moneda"
 msgctxt "field:sale.line,unit_price_w_tax:"
 msgid "Unit Price with Tax"
 msgstr "Preu unitat imp. incl."
+
+msgctxt "field:sale.payment.form,self_pick_up:"
+msgid "Self Pick Up"
+msgstr "Auto-recollida"
 
 msgctxt "field:sale.sale,paid_amount:"
 msgid "Paid Amount"
@@ -179,134 +118,6 @@ msgctxt "field:sale_pos.add_product_form,unit_price:"
 msgid "Unit price"
 msgstr "Preu unitat"
 
-msgctxt "field:sale_pos.device,company:"
-msgid "Company"
-msgstr "Empresa"
-
-msgctxt "field:sale_pos.device,create_date:"
-msgid "Create Date"
-msgstr "Data creació"
-
-msgctxt "field:sale_pos.device,create_uid:"
-msgid "Create User"
-msgstr "Usuari creació"
-
-msgctxt "field:sale_pos.device,display_baud:"
-msgid "BAUD-Rate"
-msgstr "BAUD-Rate"
-
-msgctxt "field:sale_pos.device,display_digits:"
-msgid "Digits per Row"
-msgstr "Digits per files"
-
-msgctxt "field:sale_pos.device,display_port:"
-msgid "Display port"
-msgstr "Mostrar port"
-
-msgctxt "field:sale_pos.device,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:sale_pos.device,journal:"
-msgid "Default Journal"
-msgstr "Diari per defecte"
-
-msgctxt "field:sale_pos.device,journals:"
-msgid "Journals"
-msgstr "Diaris"
-
-msgctxt "field:sale_pos.device,logo:"
-msgid "Receipt Logo"
-msgstr "Logo tiquet"
-
-msgctxt "field:sale_pos.device,name:"
-msgid "Device Name"
-msgstr "Nom dispositiu"
-
-msgctxt "field:sale_pos.device,printer_port:"
-msgid "Printer Port"
-msgstr "Port impresora"
-
-msgctxt "field:sale_pos.device,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:sale_pos.device,shop:"
-msgid "Shop"
-msgstr "Botiga"
-
-msgctxt "field:sale_pos.device,write_date:"
-msgid "Write Date"
-msgstr "Data modificació"
-
-msgctxt "field:sale_pos.device,write_uid:"
-msgid "Write User"
-msgstr "Usuari modificació"
-
-msgctxt "field:sale_pos.device_account.statement.journal,create_date:"
-msgid "Create Date"
-msgstr "Data creació"
-
-msgctxt "field:sale_pos.device_account.statement.journal,create_uid:"
-msgid "Create User"
-msgstr "Usuari creació"
-
-msgctxt "field:sale_pos.device_account.statement.journal,device:"
-msgid "Pos Device"
-msgstr "Dispositiu TPV"
-
-msgctxt "field:sale_pos.device_account.statement.journal,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:sale_pos.device_account.statement.journal,journal:"
-msgid "Statement Journal"
-msgstr "Diari d'extracte"
-
-msgctxt "field:sale_pos.device_account.statement.journal,rec_name:"
-msgid "Name"
-msgstr "Nom"
-
-msgctxt "field:sale_pos.device_account.statement.journal,write_date:"
-msgid "Write Date"
-msgstr "Data modificació"
-
-msgctxt "field:sale_pos.device_account.statement.journal,write_uid:"
-msgid "Write User"
-msgstr "Usuari modificació"
-
-msgctxt "field:sale_pos.sale_payment_form,currency_digits:"
-msgid "Currency Digits"
-msgstr "Decimals de moneda"
-
-msgctxt "field:sale_pos.sale_payment_form,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:sale_pos.sale_payment_form,journal:"
-msgid "Statement Journal"
-msgstr "Diari d'extracte"
-
-msgctxt "field:sale_pos.sale_payment_form,journals:"
-msgid "Allowed Statement Journals"
-msgstr "Diaris d'extracte permesos"
-
-msgctxt "field:sale_pos.sale_payment_form,party:"
-msgid "Party"
-msgstr "Tercer"
-
-msgctxt "field:sale_pos.sale_payment_form,payment_amount:"
-msgid "Payment amount"
-msgstr "Import pagament"
-
-msgctxt "field:sale_pos.sale_payment_form,self_pick_up:"
-msgid "Self Pick Up"
-msgstr "Auto-recollida"
-
-msgctxt "help:product.code,barcode:"
-msgid "Setting code will enable validation of the product number."
-msgstr "Indicant el codi es podrà validar el número del producte."
-
 msgctxt "help:sale.sale,self_pick_up:"
 msgid ""
 "The goods are picked up by the customer before the sale, so no shipment is "
@@ -323,25 +134,13 @@ msgstr ""
 "Els productes són recollits pel propi client abans de la venda, pel que no "
 "es generà albarà."
 
-msgctxt "help:sale_pos.device,display_port:"
-msgid "Like /dev/ttyS0"
-msgstr "Similar /dev/ttyS0"
-
-msgctxt "help:sale_pos.device,printer_port:"
-msgid "Port type the receipt printer is conntected to."
-msgstr "Tipus de port en el tiquet es troba conectat"
-
-msgctxt "model:ir.action,name:act_pos_device"
+msgctxt "model:ir.action,name:"
 msgid "POS Device"
-msgstr "Dispositiu TPV"
+msgstr "Paga"
 
 msgctxt "model:ir.action,name:act_sale_form"
 msgid "POS Sales"
 msgstr "Vendes TPV"
-
-msgctxt "model:ir.action,name:act_sale_reconcile"
-msgid "Reconcile POS Sales"
-msgstr "Concilia vendes TPV"
 
 msgctxt "model:ir.action,name:report_sale_ticket"
 msgid "Sale Ticket"
@@ -358,10 +157,6 @@ msgstr "Resum de vendes per tercer"
 msgctxt "model:ir.action,name:wizard_add_product"
 msgid "Add Product"
 msgstr "Afegeix producte"
-
-msgctxt "model:ir.action,name:wizard_sale_payment"
-msgid "Pay"
-msgstr "Paga"
 
 msgctxt "model:ir.action.act_window.domain,name:act_sale_form_domain_all"
 msgid "All"
@@ -394,7 +189,7 @@ msgctxt "model:ir.sequence.type,name:sequence_type_sale_pos"
 msgid "Sale Pos"
 msgstr "Venta TPV"
 
-msgctxt "model:ir.ui.menu,name:menu_pos_device"
+msgctxt "model:ir.ui.menu,name:"
 msgid "POS Devices"
 msgstr "Dispositius TPV"
 
@@ -402,25 +197,9 @@ msgctxt "model:ir.ui.menu,name:menu_sale"
 msgid "POS Sales"
 msgstr "Vendes TPV"
 
-msgctxt "model:product.code,name:"
-msgid "ProductCode"
-msgstr "Codi de producte"
-
 msgctxt "model:sale_pos.add_product_form,name:"
 msgid "Add Product Form"
 msgstr "Formulari afegeix producte"
-
-msgctxt "model:sale_pos.device,name:"
-msgid "Pos Device Configuration"
-msgstr "Configuració dispositiu TPV"
-
-msgctxt "model:sale_pos.device_account.statement.journal,name:"
-msgid "Pos Device - Statement Journal"
-msgstr "Dispositiu TPV - Diari d'extracte"
-
-msgctxt "model:sale_pos.sale_payment_form,name:"
-msgid "Sale Payment Form"
-msgstr "Formulari pagament venda"
 
 msgctxt "odt:sale_pos.sale_pos_ticket:"
 msgid "Amount"
@@ -586,6 +365,28 @@ msgctxt "view:sale.line:"
 msgid "Lines"
 msgstr "Línies"
 
+msgctxt "view:sale.payment.form:"
+msgid ""
+"If you pay the entire amount, it will process this sale, moving the products"
+" without shipment and invoicing it."
+msgstr ""
+"Si pagueu l'import pendent, processarà aquesta venda, creant els moviments "
+"dels productes sense l'albarà i facturant-la."
+
+msgctxt "view:sale.payment.form:"
+msgid ""
+"If you want to manage the sale step by step or generate a shipment to manage"
+" the delivery, uncheck the Self Pick Up field in Sale's form and use the "
+"buttons in the bottom line."
+msgstr ""
+"Si voleu gestionar la venda pas a pas o generar un albarà per gestionar el "
+"lliurament, desmarqueu el camp d'auto-recollida en el formulari de venda i "
+"useu els botons de la línia inferior."
+
+msgctxt "view:sale.payment.form:"
+msgid "Sale Payment Form"
+msgstr "Formulari de pagament de venda"
+
 msgctxt "view:sale.sale:"
 msgid "Add _Sum"
 msgstr "Afegeix _suma"
@@ -639,6 +440,14 @@ msgid "Shipments"
 msgstr "Enviaments"
 
 msgctxt "view:sale.sale:"
+msgid "Total Amount"
+msgstr "Total"
+
+msgctxt "view:sale.sale:"
+msgid "Untaxed Amount"
+msgstr "Base imponible"
+
+msgctxt "view:sale.sale:"
 msgid "_Add Product"
 msgstr "_Afegeix producte"
 
@@ -654,32 +463,6 @@ msgctxt "view:sale_pos.add_product_form:"
 msgid "Add product"
 msgstr "Afegeix producte"
 
-msgctxt "view:sale_pos.device:"
-msgid "POS Device Configuration"
-msgstr "Configuració dispositiu TPV"
-
-msgctxt "view:sale_pos.sale_payment_form:"
-msgid ""
-"If you pay the entire amount, it will process this sale, moving the products"
-" without shipment and invoicing it."
-msgstr ""
-"Si paga la quantitat total es processarà la venda, movent els productes "
-"sense albarà i facturant-los."
-
-msgctxt "view:sale_pos.sale_payment_form:"
-msgid ""
-"If you want to manage the sale step by step or generate a shipment to manage"
-" the delivery, uncheck the Self Pick Up field in Sale's form and use the "
-"buttons in the bottom line."
-msgstr ""
-"Si vol gestionar la venda pas a pas o generar albarà per gestionar "
-"l'enviament, desmarqui l'opció Auto-recollida del formulari de la venda i "
-"utilitzi els botons de la part inferior."
-
-msgctxt "view:sale_pos.sale_payment_form:"
-msgid "Sale Payment Form"
-msgstr "Formulari pagament venda"
-
 msgctxt "wizard_button:sale_pos.add_product,start,add_:"
 msgid "Add"
 msgstr "Afegeix"
@@ -691,11 +474,3 @@ msgstr "Afegeix i nou"
 msgctxt "wizard_button:sale_pos.add_product,start,end:"
 msgid "Cancel"
 msgstr "Cancel·la"
-
-msgctxt "wizard_button:sale_pos.sale_payment,start,end:"
-msgid "Cancel"
-msgstr "Cancel·la"
-
-msgctxt "wizard_button:sale_pos.sale_payment,start,pay_:"
-msgid "Pay"
-msgstr "Paga"
