--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -6,10 +6,6 @@ msgctxt "error:account.statement.line:"
 msgid "Amount should be a positive or negative value."
 msgstr "Importe debe ser una cantidad positiva o negativa."
 
-msgctxt "error:product.code:"
-msgid "Invalid Barcode number!"
-msgstr "El número del código de barras no es correcto."
-
 msgctxt "error:res.user:"
 msgid "You can not have two users with the same login!"
 msgstr "¡No puede tener dos usuarios con el mismo registro de entrada!"
@@ -18,70 +14,9 @@ msgctxt "error:sale.sale:"
 msgid "Go to user preferences and select a shop (\"%s\")"
 msgstr "Seleccione una tienda en sus preferencias (\"%s\")"
 
-msgctxt "error:sale_pos.device:"
-msgid "Device %s not found...!"
-msgstr "Dispositivo %s no encontrado..."
-
-msgctxt "error:sale_pos.sale_payment:"
-msgid "A customer invoice/refund from POS sale has not been created."
-msgstr ""
-"No se ha creado una factura/abono de cliente a partir de la venta TPV."
-
-msgctxt "error:sale_pos.sale_payment:"
-msgid "A draft statement for \"%s\" payments has not been created."
-msgstr "No se ha creado un extracto borrador para los pagos \"%s\"."
-
-msgctxt "error:sale_pos.sale_payment:"
-msgid "You have not defined a POS device for your user."
-msgstr "No ha asociado un dispositivo TPV a su usuario."
-
 msgctxt "field:account.statement.line,sale:"
 msgid "Sale"
 msgstr "Venta"
-
-msgctxt "field:product.code,barcode:"
-msgid "Code"
-msgstr "Código"
-
-msgctxt "field:product.code,create_date:"
-msgid "Create Date"
-msgstr "Fecha creación"
-
-msgctxt "field:product.code,create_uid:"
-msgid "Create User"
-msgstr "Usuario de creación"
-
-msgctxt "field:product.code,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:product.code,number:"
-msgid "Number"
-msgstr "Número"
-
-msgctxt "field:product.code,product:"
-msgid "Product"
-msgstr "Producto"
-
-msgctxt "field:product.code,rec_name:"
-msgid "Name"
-msgstr "Nombre"
-
-msgctxt "field:product.code,write_date:"
-msgid "Write Date"
-msgstr "Fecha modificación"
-
-msgctxt "field:product.code,write_uid:"
-msgid "Write User"
-msgstr "Usuario modificación"
-
-msgctxt "field:product.product,codes:"
-msgid "Codes"
-msgstr "Códigos"
-
-msgctxt "field:res.user,pos_device:"
-msgid "POS device"
-msgstr "Dispositivo TPV"
 
 msgctxt "field:sale.configuration,pos_sequence:"
 msgid "Sale Pos Code Sequence"
@@ -102,6 +37,10 @@ msgstr "Decimales de moneda"
 msgctxt "field:sale.line,unit_price_w_tax:"
 msgid "Unit Price with Tax"
 msgstr "Precio unidad imp. incl."
+
+msgctxt "field:sale.payment.form,self_pick_up:"
+msgid "Self Pick Up"
+msgstr "Autorecogida"
 
 msgctxt "field:sale.sale,paid_amount:"
 msgid "Paid Amount"
@@ -179,134 +118,6 @@ msgctxt "field:sale_pos.add_product_form,unit_price:"
 msgid "Unit price"
 msgstr "Precio unidad"
 
-msgctxt "field:sale_pos.device,company:"
-msgid "Company"
-msgstr "Empresa"
-
-msgctxt "field:sale_pos.device,create_date:"
-msgid "Create Date"
-msgstr "Fecha creación"
-
-msgctxt "field:sale_pos.device,create_uid:"
-msgid "Create User"
-msgstr "Usuario de creación"
-
-msgctxt "field:sale_pos.device,display_baud:"
-msgid "BAUD-Rate"
-msgstr "BAUD-Rate"
-
-msgctxt "field:sale_pos.device,display_digits:"
-msgid "Digits per Row"
-msgstr "Dígitos por filas"
-
-msgctxt "field:sale_pos.device,display_port:"
-msgid "Display port"
-msgstr "Mostrar puerto"
-
-msgctxt "field:sale_pos.device,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:sale_pos.device,journal:"
-msgid "Default Journal"
-msgstr "Diario por defecto"
-
-msgctxt "field:sale_pos.device,journals:"
-msgid "Journals"
-msgstr "Diarios"
-
-msgctxt "field:sale_pos.device,logo:"
-msgid "Receipt Logo"
-msgstr "Logo tique"
-
-msgctxt "field:sale_pos.device,name:"
-msgid "Device Name"
-msgstr "Nombre dispositivo"
-
-msgctxt "field:sale_pos.device,printer_port:"
-msgid "Printer Port"
-msgstr "Puerto impresora"
-
-msgctxt "field:sale_pos.device,rec_name:"
-msgid "Name"
-msgstr "Nombre"
-
-msgctxt "field:sale_pos.device,shop:"
-msgid "Shop"
-msgstr "Tienda"
-
-msgctxt "field:sale_pos.device,write_date:"
-msgid "Write Date"
-msgstr "Fecha modificación"
-
-msgctxt "field:sale_pos.device,write_uid:"
-msgid "Write User"
-msgstr "Usuario modificación"
-
-msgctxt "field:sale_pos.device_account.statement.journal,create_date:"
-msgid "Create Date"
-msgstr "Fecha creación"
-
-msgctxt "field:sale_pos.device_account.statement.journal,create_uid:"
-msgid "Create User"
-msgstr "Usuario de creación"
-
-msgctxt "field:sale_pos.device_account.statement.journal,device:"
-msgid "Pos Device"
-msgstr "Dispositivo TPV"
-
-msgctxt "field:sale_pos.device_account.statement.journal,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:sale_pos.device_account.statement.journal,journal:"
-msgid "Statement Journal"
-msgstr "Diario de extracto"
-
-msgctxt "field:sale_pos.device_account.statement.journal,rec_name:"
-msgid "Name"
-msgstr "Nombre"
-
-msgctxt "field:sale_pos.device_account.statement.journal,write_date:"
-msgid "Write Date"
-msgstr "Fecha modificación"
-
-msgctxt "field:sale_pos.device_account.statement.journal,write_uid:"
-msgid "Write User"
-msgstr "Usuario modificación"
-
-msgctxt "field:sale_pos.sale_payment_form,currency_digits:"
-msgid "Currency Digits"
-msgstr "Decimales de moneda"
-
-msgctxt "field:sale_pos.sale_payment_form,id:"
-msgid "ID"
-msgstr "ID"
-
-msgctxt "field:sale_pos.sale_payment_form,journal:"
-msgid "Statement Journal"
-msgstr "Diario de extracto"
-
-msgctxt "field:sale_pos.sale_payment_form,journals:"
-msgid "Allowed Statement Journals"
-msgstr "Diarios de extracto permitidos"
-
-msgctxt "field:sale_pos.sale_payment_form,party:"
-msgid "Party"
-msgstr "Tercero"
-
-msgctxt "field:sale_pos.sale_payment_form,payment_amount:"
-msgid "Payment amount"
-msgstr "Importe pago"
-
-msgctxt "field:sale_pos.sale_payment_form,self_pick_up:"
-msgid "Self Pick Up"
-msgstr "Autorecogida"
-
-msgctxt "help:product.code,barcode:"
-msgid "Setting code will enable validation of the product number."
-msgstr "Indicando el código se podrá validar el número del producto."
-
 msgctxt "help:sale.sale,self_pick_up:"
 msgid ""
 "The goods are picked up by the customer before the sale, so no shipment is "
@@ -323,25 +134,13 @@ msgstr ""
 "Los productos son recogidos por el propio cliente antes de la venta, por lo "
 "que no se crea albarán."
 
-msgctxt "help:sale_pos.device,display_port:"
-msgid "Like /dev/ttyS0"
-msgstr "Similar /dev/ttyS0"
-
-msgctxt "help:sale_pos.device,printer_port:"
-msgid "Port type the receipt printer is conntected to."
-msgstr "tipo puerto impresora tique es conectada"
-
-msgctxt "model:ir.action,name:act_pos_device"
+msgctxt "model:ir.action,name:"
 msgid "POS Device"
 msgstr "Dispositivo TPV"
 
 msgctxt "model:ir.action,name:act_sale_form"
 msgid "POS Sales"
 msgstr "Ventas TPV"
-
-msgctxt "model:ir.action,name:act_sale_reconcile"
-msgid "Reconcile POS Sales"
-msgstr "Conciliar ventas TPV"
 
 msgctxt "model:ir.action,name:report_sale_ticket"
 msgid "Sale Ticket"
@@ -358,10 +157,6 @@ msgstr "Resumen de ventas por tercero"
 msgctxt "model:ir.action,name:wizard_add_product"
 msgid "Add Product"
 msgstr "Añadir producto"
-
-msgctxt "model:ir.action,name:wizard_sale_payment"
-msgid "Pay"
-msgstr "Pagar"
 
 msgctxt "model:ir.action.act_window.domain,name:act_sale_form_domain_all"
 msgid "All"
@@ -394,7 +189,7 @@ msgctxt "model:ir.sequence.type,name:sequence_type_sale_pos"
 msgid "Sale Pos"
 msgstr "Venta TPV"
 
-msgctxt "model:ir.ui.menu,name:menu_pos_device"
+msgctxt "model:ir.ui.menu,name:"
 msgid "POS Devices"
 msgstr "Dispositivos TPV"
 
@@ -402,25 +197,9 @@ msgctxt "model:ir.ui.menu,name:menu_sale"
 msgid "POS Sales"
 msgstr "Ventas TPV"
 
-msgctxt "model:product.code,name:"
-msgid "ProductCode"
-msgstr "Código de producto"
-
 msgctxt "model:sale_pos.add_product_form,name:"
 msgid "Add Product Form"
 msgstr "Formulario añadir producto"
-
-msgctxt "model:sale_pos.device,name:"
-msgid "Pos Device Configuration"
-msgstr "Configuración dispositivo TPV"
-
-msgctxt "model:sale_pos.device_account.statement.journal,name:"
-msgid "Pos Device - Statement Journal"
-msgstr "Dispositivo TPV - Diario de extracto"
-
-msgctxt "model:sale_pos.sale_payment_form,name:"
-msgid "Sale Payment Form"
-msgstr "Formulario pago venta"
 
 msgctxt "odt:sale_pos.sale_pos_ticket:"
 msgid "Amount"
@@ -586,6 +365,28 @@ msgctxt "view:sale.line:"
 msgid "Lines"
 msgstr "Líneas"
 
+msgctxt "view:sale.payment.form:"
+msgid ""
+"If you pay the entire amount, it will process this sale, moving the products"
+" without shipment and invoicing it."
+msgstr ""
+"Si paga el importe pendiente, procesará esta venta, creando los movimientos "
+"de los productos sin albarán y facturándola."
+
+msgctxt "view:sale.payment.form:"
+msgid ""
+"If you want to manage the sale step by step or generate a shipment to manage"
+" the delivery, uncheck the Self Pick Up field in Sale's form and use the "
+"buttons in the bottom line."
+msgstr ""
+"Si desea gestionar la venta paso a paso o generar un albarán para gestionar "
+"la entrega, desmarque el campo de autorecogida en el formulario de venta y "
+"use los botones de la línea inferior."
+
+msgctxt "view:sale.payment.form:"
+msgid "Sale Payment Form"
+msgstr "Formulario de pago de la venta"
+
 msgctxt "view:sale.sale:"
 msgid "Add _Sum"
 msgstr "Añadir _suma"
@@ -639,6 +440,14 @@ msgid "Shipments"
 msgstr "Envíos"
 
 msgctxt "view:sale.sale:"
+msgid "Total Amount"
+msgstr "Total"
+
+msgctxt "view:sale.sale:"
+msgid "Untaxed Amount"
+msgstr "Base imponible"
+
+msgctxt "view:sale.sale:"
 msgid "_Add Product"
 msgstr "_Añadir producto"
 
@@ -654,32 +463,6 @@ msgctxt "view:sale_pos.add_product_form:"
 msgid "Add product"
 msgstr "Añadir producto"
 
-msgctxt "view:sale_pos.device:"
-msgid "POS Device Configuration"
-msgstr "Configuración dispositivo TPV"
-
-msgctxt "view:sale_pos.sale_payment_form:"
-msgid ""
-"If you pay the entire amount, it will process this sale, moving the products"
-" without shipment and invoicing it."
-msgstr ""
-"Si paga el importe total, se procesará esta venta moviendo los productos sin"
-" albarán y facturándolos."
-
-msgctxt "view:sale_pos.sale_payment_form:"
-msgid ""
-"If you want to manage the sale step by step or generate a shipment to manage"
-" the delivery, uncheck the Self Pick Up field in Sale's form and use the "
-"buttons in the bottom line."
-msgstr ""
-"Si quiere gestionar la venta paso a paso o generar un albarán para gestionar"
-" el envío, desmarque el campo \"Autorecogida\" en el formulario de la venta "
-"y use los botones de la parte inferior."
-
-msgctxt "view:sale_pos.sale_payment_form:"
-msgid "Sale Payment Form"
-msgstr "Formulario pago venta"
-
 msgctxt "wizard_button:sale_pos.add_product,start,add_:"
 msgid "Add"
 msgstr "Añadir"
@@ -691,11 +474,3 @@ msgstr "Añadir y nuevo"
 msgctxt "wizard_button:sale_pos.add_product,start,end:"
 msgid "Cancel"
 msgstr "Cancelar"
-
-msgctxt "wizard_button:sale_pos.sale_payment,start,end:"
-msgid "Cancel"
-msgstr "Cancelar"
-
-msgctxt "wizard_button:sale_pos.sale_payment,start,pay_:"
-msgid "Pay"
-msgstr "Pagar"
