--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -90,33 +90,13 @@ msgctxt "field:sale_pos.add_product_form,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:sale_pos.add_product_form,product:"
-msgid "Product"
-msgstr "Producto"
-
-msgctxt "field:sale_pos.add_product_form,product_uom_category:"
-msgid "Product Uom Category"
-msgstr "Categoría UdM del producto"
-
-msgctxt "field:sale_pos.add_product_form,quantity:"
-msgid "Quantity"
-msgstr "Cantidad"
+msgctxt "field:sale_pos.add_product_form,lines:"
+msgid "Lines"
+msgstr "Líneas"
 
 msgctxt "field:sale_pos.add_product_form,sale:"
 msgid "Sale"
 msgstr "Venta"
-
-msgctxt "field:sale_pos.add_product_form,unit:"
-msgid "Unit"
-msgstr "Unidad"
-
-msgctxt "field:sale_pos.add_product_form,unit_digits:"
-msgid "Unit Digits"
-msgstr "Dígitos unidad"
-
-msgctxt "field:sale_pos.add_product_form,unit_price:"
-msgid "Unit price"
-msgstr "Precio unidad"
 
 msgctxt "help:sale.sale,self_pick_up:"
 msgid ""
@@ -153,10 +133,6 @@ msgstr "Resumen de ventas"
 msgctxt "model:ir.action,name:report_sales_summary_by_party"
 msgid "Sales Summary by Party"
 msgstr "Resumen de ventas por tercero"
-
-msgctxt "model:ir.action,name:wizard_add_product"
-msgid "Add Product"
-msgstr "Añadir producto"
 
 msgctxt "model:ir.action.act_window.domain,name:act_sale_form_domain_all"
 msgid "All"
@@ -448,8 +424,8 @@ msgid "Untaxed Amount"
 msgstr "Base imponible"
 
 msgctxt "view:sale.sale:"
-msgid "_Add Product"
-msgstr "_Añadir producto"
+msgid "_Add Products"
+msgstr "_Añadir productos"
 
 msgctxt "view:sale.sale:"
 msgid "_Pay"
@@ -460,8 +436,8 @@ msgid "_Ticket"
 msgstr "_Ticket"
 
 msgctxt "view:sale_pos.add_product_form:"
-msgid "Add product"
-msgstr "Añadir producto"
+msgid "Add products"
+msgstr "Añadir productos"
 
 msgctxt "wizard_button:sale_pos.add_product,start,add_:"
 msgid "Add"
